# inject_env

./: .gitignore  .gitmodules  README.md  build.gradle.kts  justfile
module/src/main/cpp/: .clang-format  CMakeLists.txt  inject.cpp  ksu_mgr.c  ksu_mgr.h
module/template/: customize.sh  module.prop
